# singlestore-odbc-connector

./: .arcconfig  .gitattributes  .gitignore  .travis.yml  BUILD.md  CMakeLists.txt  CMakeListsOld.txt  README  README.md  azure-pipelines.yml  build-local.sh  build-ssl-1-0-0.sh  bump-version.sh  dsn_test.c  ma_ansi.c  ma_ansi.h  ma_common.c  ma_connection.c  ma_connection.h  ma_debug.c  ma_debug.h  ma_desc.c  ma_desc.h  ma_dsn.c  ma_dsn.h  ma_environment.c  ma_error.c  ma_error.h  ma_fake_request.c  ma_fake_request.h  ma_helper.c  ma_helper.h  ma_info.c  ma_info.h  ma_odbc.h  ma_odbc_version.h.in  ma_parse.c  ma_parse.h  ma_platform_posix.c  ma_platform_posix.h  (+22 more)
.circleci/: build-docker.sh  build-linux-in-docker.sh  build-linux.sh  build-osx.sh  build-project.ps1  build-ubuntu.sh  build-windows.ps1  build-windows.sh  config.yml  create-database.sh  gen-ssl.sh  run-tests-linux.sh  run-tests-osx.sh  run-tests-windows.ps1  run-tests.ps1  script.sh  setup-cluster.sh  setup-environment-centos.sh  setup-environment-debian.sh  setup-environment-docker.sh  setup-environment-linux.sh  setup-windows-host.ps1  setup_s2ms_cluster.py
.github/scripts/: build-linux-in-docker.sh  build-linux.sh  build-macos.sh  build-osx.sh  build-ubuntu.sh  gen-ssl.sh  run-tests-linux.sh  run-tests-macos.sh  run-tests-osx.sh  run-tests-windows.ps1  setup-cluster.sh  setup-environment-docker.sh  setup_s2ms_cluster.py
.run/: ensure-test-memsql-cluster.run.xml  odbc_basic.run.xml  odbc_blob.run.xml  odbc_bulk.run.xml  odbc_catalog1.run.xml  odbc_catalog2.run.xml  odbc_client_side.run.xml  odbc_connect.run.xml  odbc_connstring.run.xml  odbc_curext.run.xml  odbc_cursor.run.xml  odbc_datetime.run.xml  odbc_desc.run.xml  odbc_dyn_cursor.run.xml  odbc_error.run.xml  odbc_escape_sequences.run.xml  odbc_info.run.xml  odbc_keys.run.xml  odbc_multistatement.run.xml  odbc_param.run.xml  odbc_prepare.run.xml  odbc_relative.run.xml  odbc_result1.run.xml  odbc_result2.run.xml  odbc_scroll.run.xml  odbc_sql_buffers.run.xml  odbc_sql_execute.run.xml  odbc_sql_get_diag_field.run.xml  odbc_sql_get_diag_rec.run.xml  odbc_sql_get_functions.run.xml  odbc_sql_get_info.run.xml  odbc_sql_get_type_info.run.xml  odbc_sql_procedure_columns.run.xml  odbc_sql_row_count.run.xml  odbc_sql_special_columns.run.xml  odbc_sqlcolumns.run.xml  odbc_sqltypeinfo.run.xml  odbc_tran.run.xml  odbc_types.run.xml  odbc_unicode.run.xml  (+1 more)
.travis/: script.sh
circleci/: build-windows.ps1  config.yml  install-chrome.ps1  run-tests-osx.sh  setup-cluster.sh  setup_s2ms_cluster.py
cmake/: FindDM.cmake  FindIconv.cmake  connector_c.cmake  install.cmake
dsn/: mariadb_odbc_setup.def  odbc_dsn.c  odbc_dsn.rc  resource.h
escape_sequences/: ast.c  ast.h  lexical_analyzer.c  lexical_analyzer.h  lexical_analyzer.l  parser.c  parser.h  parser.y
keywords/: keywords.hpp
libmariadb/: .travis.yml  CMakeLists.txt  README  azure-pipelines.yml
libmariadb/zlib/: gzguts.h  (+2 more)
linuxinstall/: README.md  README.txt
osxinstall/: CMakeLists.txt  LICENSE.html  README.html  WELCOME.html.in  build_package.sh.in  copy_package_files.sh  distribution.plist.in  install_driver.c
plugins/: browser_auth.c  browser_auth.h
scripts/: ensure-test-memsql-cluster-password.sh  ensure-test-memsql-cluster.sh  mockAuthHelper.sh  setup-cluster.sh
test/: CMakeLists.txt  basic.c  blob.c  browser_auth.c  bulk.c  catalog1.c  catalog2.c  client_side.c  connect.c  connstring.c  curext.c  cursor.c  datetime.c  desc.c  dyn_cursor.c  error.c  escape_sequences.c  info.c  interactive.c  keys.c  multistatement.c  odbc.ini.in  odbcinst.ini.in  param.c  prepare.c  relative.c  result1.c  result2.c  scroll.c  sql_buffers.c  sql_execute.c  sql_get_diag_field.c  sql_get_diag_rec.c  sql_get_functions.c  sql_get_info.c  sql_get_type_info.c  sql_procedure_columns.c  sql_row_count.c  sql_special_columns.c  sqlcolumns.c  (+7 more)
test/jwt/: gen_rs_384_jwt.sh
test/ssl/: fplist.txt  test-memsql-pass-key.pem  wrongfplist.txt
wininstall/: CMakeLists.txt  change_dsns_driver.c  mariadb_odbc.xml.in  ss_odbc.xml.in
(+34 files in other folders)
